// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DataSourceManagement should match snapshot 1`] = `
<div>
  <article>
    <div
      class="actiontech-page-header-namespace css-1xspr0w"
    >
      <div
        class="title"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            数据源管理
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-1vnelmv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  class="custom-icon custom-icon-refresh"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="extra"
      >
        <a
          href="/sync-data-source/create"
        >
          <button
            class="ant-btn ant-btn-primary basic-button-wrapper css-1vnelmv"
            hidden=""
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                color="currentColor"
                fill="none"
                height="10"
                viewBox="0 0 10 10"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m5.02.5-.012 9M.5 5h9"
                  stroke="currentColor"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
            <span>
              添加同步任务
            </span>
          </button>
        </a>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="ant-btn ant-btn-default basic-button-wrapper css-1vnelmv"
              type="button"
            >
              <span>
                批量测试数据源连通性
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <a
              href="/global-data-source/batch-import"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-1vnelmv"
                type="button"
              >
                <span>
                  批量导入数据源
                </span>
              </button>
            </a>
          </div>
          <div
            class="ant-space-item"
          >
            <a
              href="/global-data-source/create"
            >
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-1vnelmv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    color="currentColor"
                    fill="none"
                    height="10"
                    viewBox="0 0 10 10"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m5.02.5-.012 9M.5 5h9"
                      stroke="currentColor"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span>
                  添加数据源
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="segmented-tabs-wrapper"
    >
      <div
        class="ant-row segmented-row-wrapper css-156vlto"
      >
        <div
          class="ant-segmented basic-segmented-wrapper css-192b3m1"
        >
          <div
            class="ant-segmented-group"
          >
            <label
              class="ant-segmented-item ant-segmented-item-selected"
            >
              <input
                checked=""
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="全局数据源"
              >
                全局数据源
              </div>
            </label>
            <label
              class="ant-segmented-item"
            >
              <input
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="外部数据源同步"
              >
                外部数据源同步
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        class="lazy-load-wrapper segmented-item-content lazy-load-wrapper-show css-952l0m"
      >
        <section>
          <div
            class="ant-space ant-space-horizontal ant-space-align-center full-width-element flex-space-between actiontech-table-toolbar-namespace css-a7k93w"
            style="flex-wrap: wrap; margin-bottom: -8px;"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px; padding-bottom: 8px;"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 12px;"
                >
                  <span
                    class="ant-input-affix-wrapper basic-input-wrapper actiontech-table-search-input-namespace css-1f6svkh ant-input-affix-wrapper-sm"
                  >
                    <input
                      class="ant-input ant-input-sm"
                      id="actiontech-table-search-input"
                      placeholder="输入关键字搜索"
                      type="text"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <span
                        class="ant-input-clear-icon ant-input-clear-icon-hidden ant-input-clear-icon-has-suffix"
                        role="button"
                        tabindex="-1"
                      >
                        <svg
                          fill="currentColor"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                          />
                        </svg>
                      </span>
                      <svg
                        class="custom-icon custom-icon-search"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m10.518 9.693 2.499 2.498-.826.825-2.498-2.498a5.252 5.252 0 0 1-8.527-4.101 5.25 5.25 0 0 1 5.25-5.25 5.252 5.252 0 0 1 4.102 8.526m-1.17-.433a4.082 4.082 0 0 0-2.931-6.927 4.08 4.08 0 0 0-4.084 4.084 4.082 4.082 0 0 0 6.927 2.93z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-sm ant-btn-two-chinese-chars actiontech-filter-button-namespace basic-button-wrapper css-1vnelmv"
                    style="padding: 0px 6px 0px 10px;"
                    type="button"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center css-1nt49ug"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 2px;"
                      >
                        筛选
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <svg
                          color="currentColor"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-space-item"
              style="padding-bottom: 8px;"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              />
            </div>
          </div>
          <div
            class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div>
                <div
                  aria-busy="true"
                  aria-live="polite"
                  class="ant-spin ant-spin-spinning"
                >
                  <span
                    class="ant-spin-dot ant-spin-dot-spin"
                  >
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                  </span>
                </div>
              </div>
              <div
                class="ant-spin-container ant-spin-blur"
              >
                <div
                  class="ant-table ant-table-empty ant-table-scroll-horizontal"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup />
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              数据源名
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              项目名称
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              环境属性
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              地址
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              上一次连接状态
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              来源
                            </th>
                            <th
                              class="ant-table-cell ellipsis-column-width"
                              scope="col"
                            >
                              描述
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              数据源类型
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              运维时间
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              未完成工单数量
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              工作台查询审核
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="11"
                            >
                              <div
                                class="ant-table-expanded-row-fixed"
                                style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                              />
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </article>
</div>
`;

exports[`test DataSourceManagement should match snapshot 2`] = `
<div>
  <article>
    <div
      class="actiontech-page-header-namespace css-1xspr0w"
    >
      <div
        class="title"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            数据源管理
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-1vnelmv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  class="custom-icon custom-icon-refresh"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="extra"
      >
        <a
          href="/sync-data-source/create"
        >
          <button
            class="ant-btn ant-btn-primary basic-button-wrapper css-1vnelmv"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                color="currentColor"
                fill="none"
                height="10"
                viewBox="0 0 10 10"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m5.02.5-.012 9M.5 5h9"
                  stroke="currentColor"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
            <span>
              添加同步任务
            </span>
          </button>
        </a>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="ant-btn ant-btn-default basic-button-wrapper css-1vnelmv"
              hidden=""
              type="button"
            >
              <span>
                批量测试数据源连通性
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <a
              href="/global-data-source/batch-import"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-1vnelmv"
                hidden=""
                type="button"
              >
                <span>
                  批量导入数据源
                </span>
              </button>
            </a>
          </div>
          <div
            class="ant-space-item"
          >
            <a
              href="/global-data-source/create"
            >
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-1vnelmv"
                hidden=""
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    color="currentColor"
                    fill="none"
                    height="10"
                    viewBox="0 0 10 10"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m5.02.5-.012 9M.5 5h9"
                      stroke="currentColor"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span>
                  添加数据源
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="segmented-tabs-wrapper"
    >
      <div
        class="ant-row segmented-row-wrapper css-156vlto"
      >
        <div
          class="ant-segmented basic-segmented-wrapper css-192b3m1"
        >
          <div
            class="ant-segmented-group"
          >
            <label
              class="ant-segmented-item"
            >
              <input
                checked=""
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="全局数据源"
              >
                全局数据源
              </div>
            </label>
            <label
              class="ant-segmented-item ant-segmented-item-selected"
            >
              <input
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="外部数据源同步"
              >
                外部数据源同步
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        class="lazy-load-wrapper segmented-item-content lazy-load-wrapper-show css-952l0m"
      >
        <article>
          <div
            class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div>
                <div
                  aria-busy="true"
                  aria-live="polite"
                  class="ant-spin ant-spin-spinning"
                >
                  <span
                    class="ant-spin-dot ant-spin-dot-spin"
                  >
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                  </span>
                </div>
              </div>
              <div
                class="ant-spin-container ant-spin-blur"
              >
                <div
                  class="ant-table ant-table-empty ant-table-scroll-horizontal"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup />
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              同步任务名
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              来源
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              地址
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              数据源类型
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              最后一次同步结果
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              最近一次同步成功时间
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="6"
                            >
                              <div
                                class="ant-table-expanded-row-fixed"
                                style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                              />
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </article>
      </div>
    </div>
  </article>
</div>
`;
